Added quarantined patients list and link to the new app with changed app name

--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -202,6 +202,7 @@
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
                   <li><a href="/infectious_disease_report">Infectious Disease report</a></li>
                   <li><a href="/ongoing_tasks">Ongoing Incidents</a></li>
+                  <li><a href="/quarantine_list">Self Quarantine List</a></li>
                   <li><a href="/follow_up">Ongoing Quarantine</a></li>
                   <li><a href="/complete_quarantine">Completed Quarantine</a></li>
               </ul>
