--- a/veoc/templates/veoc/quarantine_follow_up.html
+++ b/veoc/templates/veoc/quarantine_follow_up.html
@@ -35,10 +35,11 @@
                             <th>Origin Country</th>
                             <th>Date of last contact</th>
                             <th>Follow up Day</th>
-                            <th>Has High Temperature?</th>
+                            <th>Temperature</th>
                             <th>Has Fever?</th>
                             <th>Has Cough?</th>
                             <th>Difficulty in breathing?</th>
+                            <th>Comments</th>
                             <th>Reported Date</th>
                           </tr>
                           </thead>
@@ -53,10 +54,20 @@
                             <td>{{ follow.patient_contacts.origin_country }}</td>
                             <td>{{ follow.patient_contacts.date_of_contact|date:'d-m-Y' }}</td>
                             <td>{{ follow.follow_up_day }}</td>
-                            <td>{{ follow.body_temperature }}</td>
+                            {% if follow.body_temperature > 37.0 %}
+                            <td style="background-color: #F51B00">
+                              <b>{{ follow.body_temperature }}</b></td>
+                            {% else %}
+                                <td>{{ follow.body_temperature }}</td>
+                            {% endif %}
                             <td>{{ follow.fever }}</td>
                             <td>{{ follow.cough }}</td>
                             <td>{{ follow.difficulty_breathing }}</td>
+                            {% if follow.comment.strip %}
+                              <td>{{ follow.comment }}</td>
+                            {% else %}
+                              <td>None</td>
+                            {% endif %}
                             <td>{{ follow.created_at|date:'d-m-Y' }}</td>
                           </tr>
                         {% endfor %}
