--- a/veoc/templates/veoc/dashboard.html
+++ b/veoc/templates/veoc/dashboard.html
@@ -41,6 +41,22 @@
             <div class="well" style="border-color: #a94442">
                 <div class="small-box bg-aqua">
                     <div class="inner" style="height: 100px; width: 100%; ">
+                        <h4><b> COVID-19 Quarantine</b></h4>
+                        <h6>Total Quarantine : {{ total_cor_quarantine }} Cases</h6>
+                        <h6>Ongoing Quarantine : {{ total_ongoing_quarantine }} Cases</h6>
+                        <h6>Completed Quarantine : {{ total_completed_quarantine }} Cases</h6>
+                    </div>
+                    <div class="icon">
+                        <i class="ion ion-bag"></i>
+                    </div>
+                    <a href="/quarantine_list/" class="btn btn-primary">More infor</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="well" style="border-color: #a94442">
+                <div class="small-box bg-aqua">
+                    <div class="inner" style="height: 100px; width: 100%; ">
                         <h4><b> Diseases Reported</b></h4>
                         {% for key, value in disease_reported_dash_vals.items %}
                             <h6>{{ key }} : {{ value }} Cases</h6>
@@ -87,7 +103,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-3">
+        <!-- <div class="col-md-3">
             <div class="well" style="border-color: #a94442">
                 <div class="small-box bg-red">
                     <div class="inner" style="height: 100px; width: 100%;">
@@ -102,7 +118,7 @@
                     <a href="/week_shift" class="btn btn-primary">More infor</a>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <div class="row">
