added +254 on phone number

--- a/veoc/templates/veoc/quarantine_registration_form.html
+++ b/veoc/templates/veoc/quarantine_registration_form.html
@@ -51,14 +51,14 @@
                           </select>
                        </div>
                        <div class="form-group col-md-6">
-                         <label for="callernumber">Passport Number : *</label>
+                         <label for="callernumber">ID / Passport Number : *</label>
                          <input class="form-control" type="text" id="passport_number" name="passport_number" maxlength="10" size="45" placeholder="passport number" required/>
                        </div>
                     </div>
                     <div class="form-row" id="gender_details_div">
                        <div class="form-group col-md-6">
                          <label for="callername">Phone Number : *</label>
-                         <input class="form-control" type="number" id="phone_number" name="phone_number" size="45" placeholder="phone number" required/>
+                         <input class="form-control" type="number" id="phone_number" name="phone_number" minlength="10" placeholder="phone number" required/>
                        </div>
                        <div class="form-group col-md-6">
                          <label for="callernumber">Email address : </label>
